# windhager-tools

./: .gitattributes  .gitignore  LICENSE  README.md  TODO.md  config.py.example  hacs.json  manifest.json  pyproject.toml
custom_components/windhager/: config_flow.py  const.py  coordinator.py  manifest.json
custom_components/windhager_infowin/: __init__.py  config_flow.py  const.py  coordinator.py  language.py  manifest.json  metadata.py  naming.py  number.py  nv_names.py  select.py  sensor.py  strings.json
custom_components/windhager_infowin/lib/: __init__.py  catalog.py  client.py  crawler.py  discovery.py  models.py  reader.py  resources.py  slug.py  system.py
custom_components/windhager_infowin/translations/: de.json  fr.json  it.json
tests/: conftest.py  test_catalog.py  test_metadata.py  test_resources.py  test_system.py
tools/: analyze_names.py  build_integration.py  test_catalog.py  test_client.py  test_import.py  test_names.py  test_oidmap.py  test_poller.py  test_raw.py  test_resources.py  test_system.py  test_texts.py  test_types.py  test_varident.py
windhager/: catalog.py  crawler.py  discovery.py  poller.py  reader.py  system.py
windhager_tools/: catalog.py  client.py  crawler.py  discover.py  discovery.py  metadata.py  models.py  poller.py  reader.py  resources.py  slug.py  system.py
windhager_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
