[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "windhager_tools"
version = "0.1.0"
description = "Python library for Windhager InfoWIN Touch"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Thomas" }
]

dependencies = [
    "requests"
]

[tool.setuptools]
packages = ["windhager_tools"]